Refactor: virtual threads, zero-alloc buffer, handler registry, observer pattern
- WebSocketServer: virtual threads (newVirtualThreadPerTaskExecutor) — no platform
  thread blocked per idle connection; free win on Java 21
- Connection.run(): single pre-allocated byte[MAX_ACCUMULATOR] frame buffer;
  shift-left on consume — zero allocation per received message in the common case
- EventBroadcaster: extract broadcast(String) helper; null-guard in one place
- Compat.isClient(): cache result in static final IS_CLIENT — reflection runs once
- ChordConfig: observer pattern (setOnChanged) → notifyChanged() in addChord,
  removeChord, setMetaKey; ChordKeyHandler wires rebuildTrie at init; MinaretCommands
  drops manual rebuildTrie() calls — coupling eliminated
- MessageDispatcher: LinkedHashMap<String, Handler> registry; dispatch() is a loop;
  new message types need one HANDLERS.put() line
- Docs: update README (use action, performance, error table), SPEC (decisions 4, 20-23),
  MEMO (design decisions)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>